NoteList for exam

--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -6,7 +6,11 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Приветствую Вас на моем первом Django приложении</h1>
+    <h1>Список дел</h1>
     <img src="{% static 'common/img.png' %}" width="189" height="255" alt="Welcome image">
+    <img src="{% static 'common/img_1.png' %}" width="189" height="255" alt="Welcome image_1">
+    <h1> User: {{user}}</h1>
+    <h1> Version: {{version}} </h1>
 </body>
 </html>
+
